added list who to look up who already opened a treasure. Therefor List command was slightly refactored: You have to use parameter player, treasure or who to specify what list you want to have. proper handle global uuid fixed forget player not working fixed some tab completes scanning for the wrong argument database doesn't use extra player table, but the uuid as direct key fixed wrong saving of database config data